Colaboratory를 통해 생성됨

--- a/tensorflow_tutorial.ipynb
+++ b/tensorflow_tutorial.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxDgeXd+XNKZ1GixuJ/MMh",
+      "authorship_tag": "ABX9TyPmYpIgLDugjyg6j0ZY2DB1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,18 +35,18 @@
       "metadata": {
         "id": "kSztAqQ7QVb3"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5-oDECE851de",
-        "outputId": "d9363e1a-a493-439a-a872-413278b448a6"
+        "outputId": "309eb02e-13c4-4e2e-9e22-2cbbec9a378f"
       },
       "outputs": [
         {
@@ -71,10 +71,23 @@
         "x_train, x_test = x_train/255.0, x_test/255.0"
       ],
       "metadata": {
-        "id": "FJF5k5N7_Agh"
+        "id": "FJF5k5N7_Agh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5f58915c-376a-46e8-9d88-2634e99ef949"
       },
-      "execution_count": 16,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11490434/11490434 [==============================] - 0s 0us/step\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -92,7 +105,7 @@
       "metadata": {
         "id": "Kq5AC9fg_RU-"
       },
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -105,7 +118,7 @@
       "metadata": {
         "id": "g2hzY4UaB-bb"
       },
-      "execution_count": 18,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -122,22 +135,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_VMfM5_9DHHa",
-        "outputId": "0dcc352b-cd13-4107-d13b-85f5e6d6baba"
+        "outputId": "5961b8b8-a832-4fd0-fe70-76afcbfe780b"
       },
-      "execution_count": 31,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<tf.Tensor: shape=(1, 10), dtype=float32, numpy=\n",
-              "array([[0.1822737 , 0.07032003, 0.07481067, 0.11530907, 0.07448664,\n",
-              "        0.10825825, 0.0487538 , 0.15679963, 0.08957556, 0.07941269]],\n",
+              "array([[0.13333029, 0.07559424, 0.2182143 , 0.10576788, 0.08319917,\n",
+              "        0.10043005, 0.06747405, 0.03801482, 0.0983483 , 0.0796269 ]],\n",
               "      dtype=float32)>"
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 6
         }
       ]
     },
@@ -153,16 +166,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C-ariytWFXlI",
-        "outputId": "bf34dc79-bfb5-4cbd-9be1-73be7e8960ad"
+        "outputId": "8d432c62-a280-4f04-8ea7-d8e37d6b555c"
       },
-      "execution_count": 33,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.1822737  0.07032003 0.07481067 0.11530907 0.07448664 0.10825825\n",
-            "  0.0487538  0.15679963 0.08957556 0.07941269]]\n",
+            "[[0.13333029 0.07559424 0.2182143  0.10576788 0.08319917 0.10043005\n",
+            "  0.06747405 0.03801482 0.0983483  0.0796269 ]]\n",
             "1.0\n"
           ]
         }
@@ -171,7 +184,11 @@
     {
       "cell_type": "code",
       "source": [
-        "loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+        "# logit은 확률을 나타내는 값이 아니라, 확률을 생성하는 함수의 입력으로 사용되는 값이다.\n",
+        "# softmax함수를 사용하여 다중 클래스 분류를 수행하는 경우, 모델의 출력은 확률 분포일 것이다.\n",
+        "# softmax함수를 거치기 전의 값을 그대로 손실 함수에 전달하려고 하면, from_logits=True로 설정해 줘야 한다\n",
+        "loss_fn = tf.keras.losses.SparseCategoricalCrossentropy()\n",
+        "#loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
         "loss_fn(y_train[:1], mypred).numpy()"
       ],
       "metadata": {
@@ -179,19 +196,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WQ6nKe8MG1OB",
-        "outputId": "431f5db6-cd05-4a49-cdbe-1bc6554a13c2"
+        "outputId": "be483c64-1306-4b62-a3c8-df95c03c8d5d"
       },
-      "execution_count": 40,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "2.295117"
+              "2.2982938"
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 9
         }
       ]
     },
@@ -205,7 +222,7 @@
       "metadata": {
         "id": "01XIG6BsJiSy"
       },
-      "execution_count": 41,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -218,35 +235,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KP2q-hf_OBgb",
-        "outputId": "c22271a1-5162-4c1a-fc92-fda636ca48b0"
+        "outputId": "9443587d-14ee-4729-93d6-77306679b535"
       },
-      "execution_count": 43,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "1875/1875 [==============================] - 10s 5ms/step - loss: 0.0653 - accuracy: 0.9790\n",
+            "1875/1875 [==============================] - 9s 4ms/step - loss: 0.2994 - accuracy: 0.9113\n",
             "Epoch 2/5\n",
-            "1875/1875 [==============================] - 9s 5ms/step - loss: 0.0580 - accuracy: 0.9815\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.1427 - accuracy: 0.9571\n",
             "Epoch 3/5\n",
-            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.0538 - accuracy: 0.9828\n",
+            "1875/1875 [==============================] - 8s 4ms/step - loss: 0.1090 - accuracy: 0.9666\n",
             "Epoch 4/5\n",
-            "1875/1875 [==============================] - 9s 5ms/step - loss: 0.0468 - accuracy: 0.9846\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0872 - accuracy: 0.9738\n",
             "Epoch 5/5\n",
-            "1875/1875 [==============================] - 9s 5ms/step - loss: 0.0443 - accuracy: 0.9853\n"
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0749 - accuracy: 0.9762\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7bc0dafdb1f0>"
+              "<keras.src.callbacks.History at 0x7b975a95b8b0>"
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 11
         }
       ]
     },
@@ -260,34 +277,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uj7TRTqjOKIc",
-        "outputId": "43cdfe2c-53d9-4fc0-fea0-e50a5bb75c62"
+        "outputId": "1fcdcc99-f078-4c5f-9bdf-d78b862a36ee"
       },
-      "execution_count": 44,
+      "execution_count": 12,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/keras/src/backend.py:5727: UserWarning: \"`sparse_categorical_crossentropy` received `from_logits=True`, but the `output` argument was produced by a Softmax activation and thus does not represent logits. Was this intended?\n",
-            "  output, from_logits = _get_logits(\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "313/313 - 1s - loss: 0.0750 - accuracy: 0.9790 - 882ms/epoch - 3ms/step\n"
+            "313/313 - 1s - loss: 0.0718 - accuracy: 0.9774 - 636ms/epoch - 2ms/step\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.07503161579370499, 0.9789999723434448]"
+              "[0.07177814841270447, 0.977400004863739]"
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 12
         }
       ]
     },
@@ -305,30 +314,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t2vw2NzyQUBi",
-        "outputId": "bf60840b-5fd5-4e63-8d9d-c3af29626dba"
+        "outputId": "1d2f9689-7f1e-4493-b030-d45c98804f5f"
       },
-      "execution_count": 45,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<tf.Tensor: shape=(5, 10), dtype=float32, numpy=\n",
-              "array([[0.08533678, 0.08533678, 0.0853368 , 0.08533699, 0.08533678,\n",
-              "        0.08533678, 0.08533678, 0.23196878, 0.08533678, 0.08533678],\n",
-              "       [0.08533692, 0.08533807, 0.23196661, 0.08533694, 0.08533692,\n",
-              "        0.08533692, 0.08533692, 0.08533692, 0.08533692, 0.08533692],\n",
-              "       [0.08537316, 0.23139213, 0.08537508, 0.08537319, 0.08537766,\n",
-              "        0.08537323, 0.08537412, 0.08560891, 0.08537933, 0.08537316],\n",
-              "       [0.2319692 , 0.08533675, 0.08533676, 0.08533675, 0.08533675,\n",
-              "        0.08533676, 0.08533675, 0.0853368 , 0.08533675, 0.08533677],\n",
-              "       [0.0853401 , 0.0853401 , 0.08534011, 0.0853401 , 0.23191622,\n",
-              "        0.0853401 , 0.0853401 , 0.08534113, 0.0853401 , 0.08536194]],\n",
+              "array([[0.08534358, 0.08534359, 0.08534406, 0.08538959, 0.08534358,\n",
+              "        0.08534362, 0.08534358, 0.23186105, 0.08534358, 0.08534367],\n",
+              "       [0.08533984, 0.08535876, 0.23192011, 0.08534212, 0.08533984,\n",
+              "        0.08533986, 0.08533984, 0.08533984, 0.08533984, 0.08533984],\n",
+              "       [0.08535164, 0.23173371, 0.08535638, 0.08535312, 0.08535495,\n",
+              "        0.08535188, 0.08535261, 0.08541604, 0.0853778 , 0.08535191],\n",
+              "       [0.23194669, 0.08533818, 0.085343  , 0.0853382 , 0.08533818,\n",
+              "        0.08533822, 0.08533851, 0.08534221, 0.08533818, 0.08533866],\n",
+              "       [0.08535133, 0.08535016, 0.0853524 , 0.08535016, 0.23175691,\n",
+              "        0.08535051, 0.08535095, 0.08535708, 0.08535055, 0.08542994]],\n",
               "      dtype=float32)>"
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 13
         }
       ]
     }
